--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@testing-library/react": "^14.0.0",
     "jsdom": "^22.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
